--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt-nodejs" : "latest",
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.13.2",
-    "connect-flash" : "~0.1.1",     
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
+    "csurf": "^1.9.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "method-override": "~1.0.0",
+    "mongoose": "~3.8.1",
     "morgan": "~1.6.1",
-    "mongoose" : "~3.8.1",          
     "nodemon": "^1.9.2",
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",    
-    "passport-facebook" : "~1.0.2", 
-    "passport-twitter" : "~1.0.2",  
-    "passport-google-oauth" : "~0.1.5",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2",
     "serve-favicon": "~2.3.0"
   }
 }
