--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www --debug"
+    "start": "node ./bin/www",
+    "debug": "nodemon ./bin/www --debug"
   },
   "dependencies": {
     "bcrypt-nodejs": "latest",
