--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
-    "jade": "~1.11.0",
     "method-override": "~1.0.0",
     "mongoose": "~4.10.2",
     "morgan": "~1.6.1",
@@ -27,6 +26,7 @@
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
+    "pug": "^2.0.0-rc.2",
     "serve-favicon": "~2.3.0"
   }
 }
