--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cloudinary": "^1.3.1",
+    "compression": "^1.6.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "express-minify": "^0.2.0",
     "express-session": "^1.13.0",
     "method-override": "^2.3.9",
     "mongoose": "~4.10.2",
