--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "debug": "nodemon ./bin/www --debug"
   },
   "dependencies": {
-    "bcrypt-nodejs": "latest",
-    "bitly": "^4.1.1",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
-    "cloudinary": "^1.3.1",
-    "compression": "^1.6.2",
+    "bcrypt-nodejs": "0.0.3",
+    "bitly": "^6.1.0",
+    "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.15.0",
+    "compression": "^1.7.4",
     "connect-flash": "~0.1.1",
-    "cookie-parser": "^1.4.3",
-    "csurf": "^1.9.0",
-    "debug": "^2.6.8",
-    "express": "^4.15.3",
-    "express-minify": "^0.2.0",
-    "express-session": "^1.13.0",
-    "method-override": "^2.3.9",
-    "mongoose": "~4.10.2",
-    "morgan": "^1.8.2",
-    "nodemon": "^1.9.2",
-    "passport": "^0.3.2",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "express-minify": "^1.0.0",
+    "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.7.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.2",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.2",
-    "sendgrid": "^5.1.2",
-    "serve-favicon": "^2.4.3"
+    "pug": "^2.0.4",
+    "sendgrid": "^5.2.3",
+    "serve-favicon": "^2.5.0"
   }
 }
