--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "nodemon ./bin/www --debug"
+    "dev": "nodemon ./bin/www",
+    "debug": "node ./bin/www --inspect"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
