--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "debug": "node ./bin/www --inspect"
+    "debug": "nodemon --inspect ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
