--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "set NODE_ENV=production && node ./bin/www",
     "dev": "nodemon ./bin/www",
     "debug": "nodemon --inspect ./bin/www"
   },
