--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-minify": "^1.0.0",
     "express-session": "^1.16.2",
+    "lit-html": "^1.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
@@ -31,5 +32,9 @@
     "pug": "^2.0.4",
     "sendgrid": "^5.2.3",
     "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
