--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-minify": "^1.0.0",
     "express-session": "^1.16.2",
+    "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.1",
@@ -36,5 +37,11 @@
   "devDependencies": {
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "@pika/web": {
+    "webDependencies": [
+      "lit-html",
+      "lit-element"
+    ]
   }
 }
