--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "scripts": {
     "start": "set NODE_ENV=production && node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "debug": "nodemon --inspect ./bin/www"
+    "debug": "nodemon --inspect-brk ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "bitly": "^6.1.0",
+    "bitly": "^7.1.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.22.0",
+    "cloudinary": "^1.27.1",
     "compression": "^1.7.4",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "debug": "^4.1.1",
@@ -25,17 +25,17 @@
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.27",
+    "mongoose": "^5.13.12",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pug": "^3.0.1",
+    "pug": "^3.0.2",
     "sendgrid": "^5.2.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "webpack": "^4.44.1",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "@pika/web": {
