--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "debug": "^4.1.1",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-minify": "^1.0.0",
     "express-session": "^1.17.1",
