--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-minify": "^1.0.0",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.3",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "method-override": "^3.0.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^5.13.12",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
