--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "bitly": "^7.1.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.27.1",
+    "cloudinary": "^1.30.1",
     "compression": "^1.7.4",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^4.6.0",
+    "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
-    "debug": "^4.1.1",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-minify": "^1.0.0",
